--- a/Remote_sensing_bulk_download/Sentinel 3 Level 1 BT Bulk Download.ipynb
+++ b/Remote_sensing_bulk_download/Sentinel 3 Level 1 BT Bulk Download.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Specify date range and geo-location with .json file,  download all aailable SST data from CODA"
+    "# Specify date range and geo-location with .json file,  download all aailable brightness temperature data from Scihub"
    ]
   },
   {
@@ -26,9 +26,9 @@
    "outputs": [],
    "source": [
     "# specify username and password, initiate SentinelSat API\n",
-    "your_coda_username =  '' # fill in coda username here\n",
-    "your_coda_password = '' # replace with your coda password\n",
-    "api = SentinelAPI(your_coda_username, your_coda_password, 'https://coda.eumetsat.int')"
+    "your_scihub_username =  '' # fill in coda username here\n",
+    "your_scihub_password = '' # replace with your coda password\n",
+    "api = SentinelAPI(your_scihub_username, your_scihub_password, 'https://scihub.copernicus.eu/dhus')"
    ]
   },
   {
@@ -46,7 +46,7 @@
     "last_date = '20200608'\n",
     "\n",
     "# product type\n",
-    "p_type = 'SL_2_WST___' # product type\n",
+    "p_type = 'SL_1_RBT___' # product type\n",
     "\n",
     "# query server to see if files exist\n",
     "products = api.query(footprint,\n",
@@ -61,20 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-69"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "download_path = '' # fill in path to save data to\n",
     "\n",
