--- a/Remote_sensing_bulk_download/Sentinel 3 Level 1 BT Bulk Download.ipynb
+++ b/Remote_sensing_bulk_download/Sentinel 3 Level 1 BT Bulk Download.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "# query server to see if files exist\n",
     "products = api.query(footprint,\n",
-    "                     date=(first_data, last_date),\n",
+    "                     date=(first_date, last_date),\n",
     "                     platformname ='Sentinel-3',orbitdirection = 'Descending'\\\n",
     "                     ,producttype =  p_type)\n",
     "# print number of available products\n",
